修改为kylin-archetype，综合common-api-service

--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -14,6 +14,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>${rootArtifactId}-api</module>
         <module>${rootArtifactId}-common</module>
         <module>${rootArtifactId}-service</module>
     </modules>
