--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wengyingjian.kylin</groupId>
-    <artifactId>kylin-archetype-api</artifactId>
+    <artifactId>kylin-archetype</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
