除kylin-datasource依赖有问题外，其它都能跑通

--- a/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
@@ -17,11 +17,12 @@
             <artifactId>${rootArtifactId}-common</artifactId>
             <version>${version}</version>
         </dependency>
-
         <dependency>
-            <groupId>com.wengyingjian.kylin</groupId>
-            <artifactId>kylin-datasource</artifactId>
+            <groupId>${groupId}</groupId>
+            <artifactId>${rootArtifactId}-service</artifactId>
+            <version>${version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.wengyingjian.kylin</groupId>
             <artifactId>kylin-redis</artifactId>
