--- a/src/main/resources/archetype-resources/__rootArtifactId__-service/src/main/resources/datasource.properties
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-service/src/main/resources/datasource.properties
@@ -1,8 +1,8 @@
 datasource.master.host=localhost
 datasource.master.port=3306
-datasource.master.db=kylin_test
-datasource.master.username=admin
-datasource.master.password=admin
+datasource.master.db=kylin
+datasource.master.username=root
+datasource.master.password=root
 datasource.master.mappersPath=${package}.dao.mapper
 datasource.master.maxIdle=20
 datasource.master.minIdle=10
@@ -17,9 +17,9 @@ datasource.master.minEvictableIdleTimeMillis=30000
 
 datasource.slave.host=localhost
 datasource.slave.port=3306
-datasource.slave.db=kylin_test
-datasource.slave.username=admin
-datasource.slave.password=admin
+datasource.slave.db=kylin
+datasource.slave.username=root
+datasource.slave.password=root
 datasource.slave.mappersPath=${package}.dao.mapper
 datasource.slave.maxIdle=20
 datasource.slave.minIdle=10
