fix:add import/dbname

--- a/src/main/resources/archetype-resources/__rootArtifactId__-service/src/test/resources/datasource.properties
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-service/src/test/resources/datasource.properties
@@ -1,4 +1,4 @@
-datasource.master.host=121.42.174.165
+datasource.master.host=localhost
 datasource.master.port=3306
 datasource.master.db=kylin
 datasource.master.username=root
@@ -15,7 +15,7 @@ datasource.master.maxWait=10000
 datasource.master.removeAbandonedTimeout=60
 datasource.master.minEvictableIdleTimeMillis=30000
 
-datasource.slave.host=121.42.174.165
+datasource.slave.host=localhost
 datasource.slave.port=3306
 datasource.slave.db=kylin
 datasource.slave.username=root
