--- a/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
@@ -19,4 +19,25 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>testApi</finalName>
+        <plugins>
+            <plugin>
+                <groupId>com.alibaba.citrus.tool</groupId>
+                <artifactId>autoconfig-maven-plugin</artifactId>
+                <version>1.2</version>
+                <configuration>
+                    <userProperties>${autoconfig.file}</userProperties>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>autoconfig</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
