--- a/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
@@ -17,6 +17,11 @@
             <groupId>com.wengyingjian.kylin</groupId>
             <artifactId>kylin-rpc-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
