--- a/src/main/resources/archetype-resources/__rootArtifactId__-service/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-service/pom.xml
@@ -22,6 +22,12 @@
             <groupId>com.wengyingjian.kylin</groupId>
             <artifactId>kylin-rpc-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 
