--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -1,3 +1,4 @@
+#set( $dollar = '$' )
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -19,11 +20,15 @@
         <module>${rootArtifactId}-service</module>
     </modules>
 
+    <properties>
+        <${rootArtifactId}-common.version>${version}</${rootArtifactId}-common.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>${groupId}</groupId>
             <artifactId>${rootArtifactId}-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>$dollar{${rootArtifactId}-common.version}</version>
         </dependency>
 
         <dependency>
