--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -22,6 +22,8 @@
 
     <properties>
         <${rootArtifactId}-common.version>${version}</${rootArtifactId}-common.version>
+        <autoconfig.file>antx.properties</autoconfig.file>
+        <autoconfig.path>build</autoconfig.path>
     </properties>
 
     <dependencies>
